fix: change font color on safari

--- a/src/components/dropdown/Dropdown.module.css
+++ b/src/components/dropdown/Dropdown.module.css
@@ -10,6 +10,7 @@
     padding: 20px;
     width: 100%;
     background-color: white;
+    color: black;
     border-color: white;
     text-transform: uppercase;
     font-size: 24px;
